@@ -520,110 +520,6 @@ name|toString
 argument_list|()
 return|;
 block|}
-comment|/** Render an explanation as HTML. */
-annotation|@
-name|Deprecated
-DECL|method|toHtml
-specifier|public
-name|String
-name|toHtml
-parameter_list|()
-block|{
-name|StringBuilder
-name|buffer
-init|=
-operator|new
-name|StringBuilder
-argument_list|()
-decl_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"<ul>\n"
-argument_list|)
-expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"<li>"
-argument_list|)
-expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-name|getSummary
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"<br />\n"
-argument_list|)
-expr_stmt|;
-name|Explanation
-index|[]
-name|details
-init|=
-name|getDetails
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|details
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|buffer
-operator|.
-name|append
-argument_list|(
-name|details
-index|[
-name|i
-index|]
-operator|.
-name|toHtml
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"</li>\n"
-argument_list|)
-expr_stmt|;
-name|buffer
-operator|.
-name|append
-argument_list|(
-literal|"</ul>\n"
-argument_list|)
-expr_stmt|;
-return|return
-name|buffer
-operator|.
-name|toString
-argument_list|()
-return|;
-block|}
 block|}
 end_class
 
